--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,8 +6,8 @@
 }
 
 .rules {
-    margin-left: 20vw;
-    margin-right: 20vw;
+    margin-left: 10vw;
+    margin-right: 10vw;
 }
 
 
